--- a/product-list-with-cart-main/styles.css
+++ b/product-list-with-cart-main/styles.css
@@ -3,6 +3,16 @@
 @tailwind utilities;
 
 
+:root {
+  --orangestyle: hsl(14, 86%, 42%);
+  --greenstyle: hsl(159, 69%, 38%);
+  --rose-50: hsl(20, 50%, 98%);
+  --rose-100: hsl(13, 31%, 94%);
+  --rose-300: hsl(14, 25%, 72%);
+  --rose-400: hsl(7, 20%, 60%);
+  --rose-500: hsl(12, 20%, 44%);
+  --rose-900: hsl(14, 65%, 9%);
+}
 
 
 .list-products{
@@ -11,5 +21,122 @@
   grid-template-columns: repeat(3, 1fr);
   /* center */
   place-content: center;
-  gap: 7px;
+  gap: 15px;
+  align-items: stretch;
 }
+
+@media (max-width: 1000px) {
+  .list-products{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 760px) {
+  .list-products{
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+
+.item-cart{
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  
+  background-color: white;
+  box-shadow: none; /* quita sombra si no la quieres */
+  margin: 10px;
+  width: 100%;
+  height: 95%;
+
+}
+
+.item-cart__image-container {
+  position: relative;
+  
+}
+
+
+.item-cart__image{
+  width: 100%;
+  display: block;
+}
+
+
+/* main button */
+.item-cart__button-main{
+  position: absolute;
+  bottom: -15px;
+  left: 15%;
+  background-color: white;
+  border-radius: 50px;
+  padding: 5px 12px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  gap: 8px;
+  font-weight: bold;
+  font-size: 14px;
+  cursor: pointer;
+  
+}
+
+
+
+.item-cart__button-text{
+  font-weight: bold;
+  font-size: 16px;
+}
+
+
+/* extra button */
+
+.item-cart__button-quantity{
+  
+  display: none;
+  margin-top: 5px;
+
+}
+
+.item-cart__minus{
+
+}
+.item-cart__quantity{
+  
+
+}
+.item-cart__plus{
+  
+}
+
+
+/*item description*/
+
+.item-cart__description{
+  
+  min-height: 100px;
+  margin-top: 20px; 
+  padding: 10px;
+}
+
+.item-cart__category{
+  font-size: 14px;
+  color: #888;
+}
+
+.item-cart__name{
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+}
+
+.item-cart__price{
+  font-size: 16px;
+  color: var(--orangestyle);
+  font-weight: bold;
+  margin-top: 5px;
+  
+}
+
+
+
