--- a/testimonials-grid-section/src/styles/global.css
+++ b/testimonials-grid-section/src/styles/global.css
@@ -2,6 +2,10 @@
 
 body{
   background-color: var(--color-grey-100);
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  align-items: center;
 }
 
 @layer components {
@@ -14,14 +18,11 @@ body{
       "E"
       "C";
 
-    grid-template-columns: 1fr;
-    
-    gap: 2rem;
-    padding: 1.5rem;
-    margin: 1rem auto;
-    height: 100vh;
-    max-width: 1440px;
-    max-height: 800px;
+      grid-template-columns: 1fr;
+      gap: 1.5rem;
+      padding: 1.5rem;
+      max-width: 1300px;
+      margin: 0 auto;
   }
 
   .area-A {
@@ -44,7 +45,7 @@ body{
   .box-custom {
     box-shadow: 40px 40px 50px -12px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    padding: 3rem;
+    padding: 1rem 2rem;
   }
 
   @media (min-width: 1024px) {
@@ -56,10 +57,7 @@ body{
       grid-template-columns: repeat(4, 1fr);
       grid-auto-rows: 1fr;
       gap: 2rem;
-      padding: 3rem 2rem;
-      margin: auto;
-      
-      
+      padding: 1.5rem;
       
     }
   }
@@ -85,7 +83,7 @@ body{
   /* Primary */
   --color-purple-50: hsl(260, 100%, 95%);
   --color-purple-300: hsl(264, 82%, 80%);
-  --color-apurple-500: hsl(263, 55%, 52%);
+  --color-purple-500: hsl(263, 55%, 52%);
 
   /* Neutral */
   --color-white: hsl(0, 0%, 100%);
