--- a/testimonials-grid-section/src/styles/global.css
+++ b/testimonials-grid-section/src/styles/global.css
@@ -46,6 +46,21 @@ body{
     box-shadow: 40px 40px 50px -12px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     padding: 1rem 2rem;
+
+  }
+
+  @media (min-width: 500px) {
+    .grid-areas-layout {
+      display: grid;
+      grid-template-areas:
+        "A A"
+        "B D"
+        "E E"
+        "C C";
+      gap: 2rem;
+      grid-template-columns: repeat(2, 1fr);
+      
+    }
   }
 
   @media (min-width: 1024px) {
@@ -58,9 +73,10 @@ body{
       grid-auto-rows: 1fr;
       gap: 2rem;
       padding: 1.5rem;
-      
     }
   }
+
+  
 }
 
 @font-face {
