--- a/loopstudios-landing-page/src/components/Creations.astro
+++ b/loopstudios-landing-page/src/components/Creations.astro
@@ -51,10 +51,10 @@ const creations = [
             class="w-full h-full object-cover"
           />
            {/* Overlay con degradado oscuro */}
-           <div class="absolute inset-0 bg-gradient-to-r from-black/40 to-transparent z-10" />
+           <div class="absolute inset-0 bg-gradient-to-r from-black/50 to-transparent z-10" />
 
           <div class="absolute bottom-4 left-6">
-            <h3 class="text-white text-2xl w-[140px] leading-7 ">
+            <h3 class="relative text-gray-200 text-2xl w-[140px] leading-7 z-20 ">
               {creation.title}
             </h3>
           </div>
@@ -62,7 +62,7 @@ const creations = [
       ))}
     </div>
 
-    <button class="text-center font-alata tracking-[2px]  mx-auto block border-2 border-black text-black py-1 px-8 text-sm mt-7">
+    <button class="text-center font-alata tracking-[4px]  mx-auto block border-3 border-black text-black py-1 px-8 text-[12px] mt-7 hover:bg-black hover:text-white cursor-pointer">
       SEE ALL
     </button>
   </div>
