--- a/loopstudios-landing-page/src/components/Introduction.astro
+++ b/loopstudios-landing-page/src/components/Introduction.astro
@@ -1,10 +1,10 @@
-<section class="min-h-screen bg-white">
-  <div class="flex flex-col items-center justify-center mx-6 mt-24">
+<section class="bg-white my-20">
+  <div class="flex flex-col items-center justify-center mx-6">
     <img src="/images/desktop/image-interactive.jpg" alt="Interactive" class="w-full h-full object-cover">
-    <h2 class="text-3xl text-center mt-8 mb-4">
+    <h2 class="text-3xl text-center mt-8 mb-4 leading-none">
       THE LEADER IN INTERACTIVE VR
     </h2>
-    <p class="text-center px-4 font-alata leading-6 text-grey-200">
+    <p class="text-center px-4 font-alata leading-6 text-grey-500">
       Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.
     </p>
   </div>
