--- a/loopstudios-landing-page/src/styles.css
+++ b/loopstudios-landing-page/src/styles.css
@@ -21,6 +21,9 @@
   --color-white: hsl(0, 0%, 100%);
   --color-black: hsl(0, 0%, 0%);
   --color-grey-200: hsl(0, 0%, 85%);
+  --color-grey-300: hsl(0, 0%, 75%);
+  --color-grey-400: hsl(0, 0%, 65%);
+  --color-grey-500: hsl(0, 0%, 55%);
 
   --font-alata: "Alata", sans-serif;
   --font-josefin: "Josefin Sans", sans-serif;
