--- a/loopstudios-landing-page/src/components/Footer.astro
+++ b/loopstudios-landing-page/src/components/Footer.astro
@@ -2,24 +2,25 @@
 import navbarOptions from "@/navbaroptions/navbaroptions";
 ---
 
-
-
-
-
-<footer class="bg-black text-white py-16 block font-alata ">
-  <div class="flex flex-col items-center gap-5 ">
-
+<footer class="bg-black text-white py-16 block font-alata">
+  <div class="flex flex-col items-center gap-5">
     <!-- imagen -->
-    <div><img src="/images/logo.svg" alt="Loopstudios" class="h-6 w-auto" /></div>
+    <div>
+      <img src="/images/logo.svg" alt="Loopstudios" class="h-6 w-auto" />
+    </div>
 
     <!-- navegación -->
     <div class="mt-4">
       <ul class="flex flex-col items-center gap-4 text-[15px]">
-        {navbarOptions.map(({name, href}) => (
-          <li>
-            <a href="*" class="hover:underline">{name}</a>
-          </li>
-        ))}
+        {
+          navbarOptions.map(({ name, href }) => (
+            <li>
+              <a href="*" class="hover:underline">
+                {name}
+              </a>
+            </li>
+          ))
+        }
       </ul>
     </div>
 
