--- a/loopstudios-landing-page/src/components/Introduction.astro
+++ b/loopstudios-landing-page/src/components/Introduction.astro
@@ -1,11 +1,13 @@
-<section class="bg-white my-20">
-  <div class="flex flex-col items-center justify-center mx-6">
-    <img src="/images/desktop/image-interactive.jpg" alt="Interactive" class="w-full h-full object-cover">
-    <h2 class="text-3xl text-center mt-8 mb-4 leading-none">
-      THE LEADER IN INTERACTIVE VR
-    </h2>
-    <p class="text-center px-4 font-alata leading-6 text-grey-500">
-      Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.
-    </p>
+<section class="bg-white my-20 xl:my-40">
+  <div class="flex flex-col items-center justify-center mx-6 xl:flex-row bg-red-300 xl:relative ">
+    <img src="/images/desktop/image-interactive.jpg" alt="Interactive" class="w-full h-full object-cover xl:h-[500px] xl:object-contain">
+    <div class="xl:bg-white xl:p-10 xl:border-5 xl:border-gray-400 xl:absolute xl:w-1/2 xl:right-0 xl:top-0 ">
+      <h2 class="text-3xl text-center mt-8 mb-4 leading-none">
+        THE LEADER IN INTERACTIVE VR
+      </h2>
+      <p class="text-center px-4 font-alata leading-6 text-grey-500 xl:text-left ">
+        Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.
+      </p>
+    </div>
   </div>
 </section>
