--- a/loopstudios-landing-page/src/components/Introduction.astro
+++ b/loopstudios-landing-page/src/components/Introduction.astro
@@ -1,13 +1,25 @@
-<section class="bg-white my-20 xl:my-40">
-  <div class="flex flex-col items-center justify-center mx-6 xl:flex-row bg-red-300 xl:relative ">
-    <img src="/images/desktop/image-interactive.jpg" alt="Interactive" class="w-full h-full object-cover xl:h-[500px] xl:object-contain">
-    <div class="xl:bg-white xl:p-10 xl:border-5 xl:border-gray-400 xl:absolute xl:w-1/2 xl:right-0 xl:top-0 ">
-      <h2 class="text-3xl text-center mt-8 mb-4 leading-none">
+
+<section class="my-20 lg:my-40 max-w-[1400px] lg:mx-auto">
+  <div class="relative lg:px-10 ">
+
+    <!-- Imagen (ancho total en desktop, no centrada) -->
+    <img
+      src="/images/desktop/image-interactive.jpg"
+      alt="Interactive"
+      class="mx-auto w-[320px] md:w-[550px] lg:mx-0 lg:w-[850px] lg:h-[560px] lg:object-contain"
+    />
+
+    <!-- Bloque de texto sobre la imagen -->
+    <div class="bg-white px-10 py-12 lg:absolute lg:bottom-0 lg:right-[100px] lg:max-w-[600px] lg:pl-20 lg:pr-28 lg:pt-20 ">
+      <h2 class="text-3xl font-light uppercase mb-6 leading-none tracking-wider lg:text-4xl lg:w-auto text-center lg:text-left ">
         THE LEADER IN INTERACTIVE VR
       </h2>
-      <p class="text-center px-4 font-alata leading-6 text-grey-500 xl:text-left ">
+
+      
+      <p class="font-alata text-sm leading-6 text-gray-600 text-center lg:text-left">
         Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.
       </p>
     </div>
+
   </div>
 </section>
