space tourism website init challenge

--- a/space-tourism-website/src/styles.css
+++ b/space-tourism-website/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+@import "tailwindcss";
+
+
+@theme{
+  --blue-900: hsl(230, 35%, 7%);
+  --blue-300: hsl(231, 77%, 90%)
+
+}
+
+
+@Layer components{
+  .img{
+    @apply block;
+  }
+}
