--- a/space-tourism-website/src/app/app.component.html
+++ b/space-tourism-website/src/app/app.component.html
@@ -2,12 +2,10 @@
 
   <!-- <div class="absolute inset-0 bg-black opacity-50"></div> -->
 
-  <header class="relative z-10">
+  <header>
     <app-header></app-header>
   </header>
-  <main
-    class="absolute inset-0 h-[100vh] bg-[url('/assets/home/background-home-mobile.jpg')] bg-cover bg-no-repeat bg-center md:bg-[url('/assets/home/background-home-tablet.jpg')] lg:bg-[url('/assets/home/background-home-desktop.jpg')] z-[-10]"
-  >
+  <main class="text-white">
     <router-outlet />
   </main>
 </div>
