--- a/space-tourism-website/src/app/pages/destination/destination.component.html
+++ b/space-tourism-website/src/app/pages/destination/destination.component.html
@@ -1,1 +1,68 @@
-<p>destination works!</p>
+<div class="absolute inset-0 h-[100vh] bg-[url('/assets/destination/background-destination-mobile.jpg')] bg-cover bg-no-repeat bg-center md:bg-[url('/assets/destination/background-destination-tablet.jpg')] lg:bg-[url('/assets/destination/background-destination-desktop.jpg')] z-[-10]">
+</div>
+
+<div>
+   01 Pick your destination
+
+  Moon
+  Mars
+  Europa
+  Titan
+
+  Moon
+
+  See our planet as you’ve never seen it before. A perfect relaxing trip away to help
+  regain perspective and come back refreshed. While you’re there, take in some history
+  by visiting the Luna 2 and Apollo 11 landing sites.
+
+  Avg. distance
+  384,400 km
+
+  Est. travel time
+  3 days
+
+
+
+  Mars
+
+  Don’t forget to pack your hiking boots. You’ll need them to tackle Olympus Mons,
+  the tallest planetary mountain in our solar system. It’s two and a half times
+  the size of Everest!
+
+  Avg. distance
+  225 mil. km
+
+  Est. travel time
+  9 months
+
+
+
+
+  Europa
+
+  The smallest of the four Galilean moons orbiting Jupiter, Europa is a
+  winter lover’s dream. With an icy surface, it’s perfect for a bit of
+  ice skating, curling, hockey, or simple relaxation in your snug
+  wintery cabin.
+
+  Avg. distance
+  628 mil. km
+
+  Est. travel time
+  3 years
+
+
+
+   Titan
+
+  The only moon known to have a dense atmosphere other than Earth, Titan
+  is a home away from home (just a few hundred degrees colder!). As a
+  bonus, you get striking views of the Rings of Saturn.
+
+  Avg. distance
+  1.6 bil. km
+
+  Est. travel time
+  7 years
+
+</div>
