--- a/space-tourism-website/src/app/pages/home/home.component.html
+++ b/space-tourism-website/src/app/pages/home/home.component.html
@@ -1,1 +1,89 @@
-<p>home works!</p>
+<div class="fixed inset-0  bg-[url('/assets/home/background-home-mobile.jpg')]  bg-no-repeat bg-cover md:bg-[url('/assets/home/background-home-tablet.jpg')] lg:bg-[url('/assets/home/background-home-desktop.jpg')] z-[-10]">
+</div>
+
+<div class="">
+
+  <h2>
+    So, you want to travel to
+  </h2>
+  <h1>
+    Space
+  </h1>
+
+  <p class="text-8xl">
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p>
+  <p>
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p>
+  <p>
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p>
+  <p>
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p>
+  <p>
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p><p>
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p>
+  <p>
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p>
+  <p>
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p>
+  <p>
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p>
+  <p>
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p>
+  <p>
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p>
+  <p>
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p>
+  <p>
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p>
+  <p>
+    Let’s face it; if you want to go to space, you might as well genuinely go to
+    outer space and not hover kind of on the edge of it. Well sit back, and relax
+    because we’ll give you a truly out of this world experience!
+  </p>
+
+  <div>
+    Explore
+
+  </div>
+
+
+</div>
