space tourism, fix navbar, add home page

--- a/space-tourism-website/src/app/app.component.html
+++ b/space-tourism-website/src/app/app.component.html
@@ -5,7 +5,7 @@
   <header>
     <app-header></app-header>
   </header>
-  <main class="text-white">
+  <main class="text-bluelight ">
     <router-outlet />
   </main>
 </div>
