--- a/space-tourism-website/src/app/pages/home/home.component.html
+++ b/space-tourism-website/src/app/pages/home/home.component.html
@@ -1,89 +1,35 @@
-<div class="fixed inset-0  bg-[url('/assets/home/background-home-mobile.jpg')]  bg-no-repeat bg-cover md:bg-[url('/assets/home/background-home-tablet.jpg')] lg:bg-[url('/assets/home/background-home-desktop.jpg')] z-[-10]">
-</div>
+<div
+  class="fixed inset-0 bg-[url('/assets/home/background-home-mobile.jpg')] bg-no-repeat bg-cover md:bg-[url('/assets/home/background-home-tablet.jpg')] lg:bg-[url('/assets/home/background-home-desktop.jpg')] z-[-10]"
+></div>
 
-<div class="">
+<div class="text-center mt-5">
+  <h2 class="uppercase font-barlow-condensed leading-[33.6px] tracking-[4px] ">So, you want to travel to</h2>
+  <h1 class="text-white text-[100px] uppercase font-bellefair">Space</h1>
 
-  <h2>
-    So, you want to travel to
-  </h2>
-  <h1>
-    Space
-  </h1>
+  <!-- line-height de 180% -->
 
-  <p class="text-8xl">
+  <p
+    class="text-[14px] leading-[1.8] mx-auto w-[320px]"
+  >
     Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-  </p>
-  <p>
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-  </p>
-  <p>
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-  </p>
-  <p>
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-  </p>
-  <p>
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-  </p><p>
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-  </p>
-  <p>
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-  </p>
-  <p>
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-  </p>
-  <p>
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-  </p>
-  <p>
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-  </p>
-  <p>
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-  </p>
-  <p>
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-  </p>
-  <p>
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-  </p>
-  <p>
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
+    outer space and not hover kind of on the edge of it. Well sit back, and
+    relax because we’ll give you a truly out of this world experience!
   </p>
 
-  <div>
-    Explore
+  <!-- Contenedor principal -->
+  <div
+    class="group relative flex justify-center items-center w-40 h-40 mx-auto mt-28"
+  >
+    <!-- Círculo de fondo (aura animada) -->
+    <div
+      class="absolute w-20 h-20 p-40 rounded-full bg-white/0 transition-all duration-300 ease-in-out group-hover:bg-white/5 group-hover:scale-100"
+    ></div>
 
+    <!-- Botón -->
+    <div
+      class="relative z-10 bg-white text-black rounded-full w-20 h-20 p-20 flex items-center justify-center cursor-pointer"
+    >
+      <p class="text-[16px] font-bellefair uppercase text-black/90">Explore</p>
+    </div>
   </div>
-
-
 </div>
