--- a/space-tourism-website/src/styles.css
+++ b/space-tourism-website/src/styles.css
@@ -1,11 +1,46 @@
 @import "tailwindcss";
 
+/* bellefair regular, Barlow Condensed Regular Barlow Regular */
+
+@font-face {
+  src: url( '/fonts/Bellefair/Bellefair-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-family: 'bellefair';
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  src: url( '/fonts/Barlow_Condensed/BarlowCondensed-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-family: 'barlow-condensed';
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  src: url( '/fonts/Barlow/Barlow-Regular.ttf') format('trueetype');
+  font-weight: 400;
+  font-family: 'barlow';
+  font-style: normal;
+  font-display: swap;
+}
+
 
 @theme{
-  --blue-900: hsl(230, 35%, 7%);
-  --blue-300: hsl(231, 77%, 90%)
+  --color-bluedark: hsl(230, 35%, 7%);
+  --color-bluelight:  hsl(231, 77%, 90%);
+  --white: hsl(0, 0%, 100%);
 
+  --font-bellefair: 'bellefair';
+  --font-barlow-condensed: 'barlow-condensed';
+  --font-barlow: 'barlow';
 }
+
+
+
+
+
 
 
 @Layer components{
